2004-02-08  Jesus Calvino-Fraga <jesusc AT ece.ubc.ca>

	* doc/sdccman.lyx: added section 3.14: sdcclib.

2004-02-08 Frieder Ferlemann <Frieder.Ferlemann AT web.de>

	* device/include/c8051f120.h,
	* device/include/c8051f300.h,
	* device/include/c8051f310.h: added/updated header files for Silicon
	Laboratories (formerly Cygnal) CPUs. Contributed by Maarten Brock.
	* doc/sdccman.lyx: minor changes, recommended diff -Naur and diff -u
	in new section Submitting patches

2004-02-08 Erik Petrich <epetrich AT ivorytower.norman.ok.us>

	* src/mcs51/gen.c (genNearPointerGet, genPagedPointerGet,
	genFarPointerGet, genCodePointerGet, genGenPointerGet,
	genNearPointerSet, genPagedPointerSet, genFarPointerSet,
	genGenPointerSet),
	* src/ds390/gen.c (genNearPointerGet, genPagedPointerGet,
	genFarPointerGet, genCodePointerGet, genGenPointerGet,
	genNearPointerSet, genPagedPointerSet, genFarPointerSet,
	genGenPointerSet),
	* src/pic16/gen.c (genNearPointerGet, genPagedPointerGet,
	genFarPointerGet, genCodePointerGet, genGenPointerGet,
	genNearPointerSet, genPagedPointerSet, genFarPointerSet,
	genGenPointerSet),
	* src/pic/gen.c (genNearPointerGet, genPagedPointerGet,
	genFarPointerGet, genCodePointerGet, genGenPointerGet,
	genNearPointerSet, genPagedPointerSet, genFarPointerSet,
	genGenPointerSet): fixed bug #892400
	* src/pic16/gen.c (genSkipz, AccRol): disabled functions with #if 0
	to eliminate build warnings.
	* src/SDCCast.c (processParms),
	* src/SDCC.y (function_declarator2, declarator2_function_attributes):
	fixed bug 751859
	* support/valdiag/valdiag.py: added GCC to the list of defines active
	when compiling with gcc

2004-02-07 Erik Petrich <epetrich AT ivorytower.norman.ok.us>

	* support/Util/SDCCerr.h,
	* support/Util/SDCCerr.c,
	* src/SDCCast.c (decorateType, sizeofOp): complain when sizeof is used
	with an incomplete type (fixed bug #883734)
	* src/SDCCicode.c (geniCodeCast): fixed bug #890510

2004-02-07 Erik Petrich <epetrich AT ivorytower.norman.ok.us>
